# movarr

./: .gitignore  .pre-commit-config.yaml  README.md  SIPHONATOR_SPEC.md  pyproject.toml
.plans/: 2026-06-22-notification-markdown-redesign.md  2026-07-11-notification-body-formatting.md  2026-07-20-queue-supersession.md  TECH_DEBT.md
configs/: movarr.yml
docs/superpowers/plans/: 2026-05-08-post-process-hooks.md  2026-05-15-reject-genre-exclusive.md
docs/superpowers/specs/: 2026-05-02-config-migration-design.md  2026-05-03-torrent-status-tracking-design.md  2026-05-04-prowlarr-support-design.md  2026-05-08-post-process-hooks-design.md  2026-05-15-reject-genre-exclusive-design.md  2026-05-15-reject-genre-if-only-design.md
specs/: 2026-06-22-notification-markdown-redesign.md  2026-07-11-notification-body-formatting-design.md  2026-07-20-queue-supersession-design.md
src/movarr/: cli.py  cli.py,cover  config.py  config.py,cover  database.py  database.py,cover  downloader.py  downloader.py,cover  file_utils.py  file_utils.py,cover  filters.py  filters.py,cover  imdb_metadata.py  imdb_metadata.py,cover  imdb_search.py  imdb_search.py,cover  index_proxy_health.py  index_proxy_health.py,cover  indexer.py  indexer.py,cover  jackett.py  jackett.py,cover  logger.py  logger.py,cover  models.py  models.py,cover  notifications.py  notifications.py,cover  parsing.py  parsing.py,cover  post_processor.py  post_processor.py,cover  prowlarr.py  prowlarr.py,cover  qbittorrent.py  qbittorrent.py,cover  queue_manager.py  queue_manager.py,cover  scheduler.py  scheduler.py,cover  (+8 more)
tests/unit/: test_cli.py  test_config.py  test_database.py  test_downloader.py  test_file_utils.py  test_filters.py  test_imdb_metadata.py  test_imdb_search.py  test_index_proxy_health.py  test_indexer.py  test_jackett.py  test_logger.py  test_models.py  test_notifications.py  test_parsing.py  test_post_processor.py  test_prowlarr.py  test_qbittorrent.py  test_queue_manager.py  test_scheduler.py  test_search.py  test_service_health.py  test_torrent_client_health.py  test_utils.py
