[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "movarr"
version = "1.2.7"
description = "Automated tool"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "dev", email = "megalith01@gmail.com"}
]
keywords = ["movie", "imdb", "automation", "torrent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "apscheduler",
    "backoff",
    "click",
    "loguru",
    "daemonize",
    "apprise",
    "pyyaml",
    "requests",
    "sqlalchemy",
    "urllib3",
    "pydantic>=2.0.0",
    "qbittorrent-api",
    "imdbpie",
    "xmltodict",
    "pycountry>=26.2.16",
    "omdb>=0.10.1",
    "ddgs>=9.0.0",
]

[project.scripts]
movarr = "movarr.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]

ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/*" = ["S101"]      # assert usage in tests

[tool.ruff.lint.isort]
known-first-party = ["movarr"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
mypy_path = "src"
plugins = ["pydantic.mypy"]

# Relax for tests
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Third-party packages without type stubs
[[tool.mypy.overrides]]
module = "backoff"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "qbittorrentapi"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "apprise"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pycountry"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["imdbpie", "imdbpie.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "omdb"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ddgs"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["requests", "requests.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "xmltodict"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
minversion = "7.0"
addopts = """
    -ra
    --strict-markers
    --strict-config
    --cov=src/movarr
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml
"""
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.pydantic-mypy]
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-crap @ git+https://github.com/binhex/pytest-crap.git@v0.3.1",
    "types-requests>=2.31.0",
    "types-pyyaml>=6.0.0",
    "pre-commit"
]
